[tool.poetry]
name = "rate-limiters"
version = "0.2.8"
description = "Rate limiters for APIs and web scraping."
authors = ["Dan Kelleher <kelleherjdan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
ezloggers = "^1.0.0"
redis = {extras = ["hiredis"], version = "^4.3.5", optional=true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.16.0"
black ="^21.12b0"

[tool.poetry.extras]
distributed = ["redis"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
