[project]
name = "rate-limiters"
version = "0.2.10"
description = "Rate limiters for APIs and web scraping."
#authors = ["Dan Kelleher <kelleherjdan@gmail.com>"]

dependencies = ["quicklogs"]

[project.optional-dependencies]
dev = ["black", "pytest", "pytest-asyncio"]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
